2022-06-11  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50356: Etc/FAQ.yo: work around a yodl bug (mishandling of \'e)

2022-06-09  Bart Schaefer  <schaefer@zsh.org>

	* 50363: Src/Modules/param_private.c: avoid use of heap memory
	that depends on parameter scoping

2022-06-09  Matthew Martin <phy1729@gmail.com>

	* 50359: Src/builtin.c: fix bad sticky-emulation in "functions -c"

2022-06-09  Bart Schaefer  <schaefer@zsh.org>

	* 50351: Src/builtin.c: "functions -c" can set signal traps

2022-06-09  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50342: Src/jobs.c, Test/A05execution.ztst: fix test added by
	50306

2022-06-08  Bart Schaefer  <schaefer@zsh.org>

	* 50341: Src/parse.c: disallow here-doc markers containing newline

	* 50335: Functions/Misc/zargs: simplify "wait" usage, fix signal
	handling for functions used as the command.

2022-06-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 50339: Doc/Zsh/options.yo, Src/text.c, Test/C04funcdef.ztst:
	Make multiple function output safer with NO_MULTI_FUNC_DEF and
	document exceptions to errors raised by MULTI_FUNC_DEF.

2022-06-04  Bart Schaefer  <schaefer@zsh.org>

	* 50323: Completion/Base/Utility/_shadow (new file),
	Completion/Base/Widget/_complete_help, Functions/Zle/keeper:
	create helper for shadowing builtins or existing functions and
	use it when redefining compadd et al.

2022-06-03  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50306: Src/jobs.c, Src/signals.c, Test/A05execution.ztst: fix
	wait builtin for child that has been stopped and continued.

2022-06-02  Bart Schaefer  <schaefer@zsh.org>

	* 50325: Src/Zle/compmatch.c, Src/Zle/computil.c: revert 38150 and
	fix in calling function cfp_matcher_range() instead

2022-05-30  Bart Schaefer  <schaefer@zsh.org>

	* Marlon Richert: 50307 (cf. PWS 50205):
	Completion/Zsh/Type/_suffix_alias_files: suffix aliases should not
	collide	with directory names when completing

2022-05-26  Peter Stephenson  <p.stephenson@samsung.com>
